--- a/app/src/main/res/layout/details.xml
+++ b/app/src/main/res/layout/details.xml
@@ -1,18 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
     <ImageView
+
         android:id="@+id/Im_cover"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         android:layout_marginTop="70dp"
+        android:background="@drawable/rectangle"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:src="@color/black"
+
         app:layout_constraintTop_toTopOf="parent"/>
 
     <TextView
@@ -20,13 +22,13 @@
         app:layout_constraintTop_toBottomOf="@+id/Im_cover"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="dasdasdasdasdas"
+        android:background="@drawable/rectangle"
         android:textSize="20sp"
         android:layout_marginTop="20dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
-    titleKA
+
 
     <TextView
         android:id="@+id/tv_publishDate"
@@ -47,6 +49,8 @@
         android:text="eeeeeeeeee"
         android:textSize="20sp"
         android:layout_marginTop="20dp"
+        android:layout_marginBottom="50dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
